# Rentars

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  TODO.md  codecov.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: backend-ci.yml  ci.yml  contract-tests.yml  contracts-ci.yml  coverage.yml  deploy-backend.yml  deploy-frontend.yml  e2e-tests.yml  frontend-ci.yml  release.yml  security.yml  storybook.yml
apps/backend/: .env.example  .env.production.example  Dockerfile  jest.config.js  openapi.json  package.json
apps/backend/database/migrations/: 00014_pricing_and_settings.sql  (+1 more)
apps/backend/src/: index.ts
apps/backend/tests/: setup.ts
apps/contracts/: Cargo.toml
apps/contracts/contracts/booking/: CONTRACT_OVERVIEW.md  Cargo.toml
apps/contracts/contracts/booking/src/: lib.rs  test.rs
apps/contracts/contracts/property-listing/: CONTRACT_OVERVIEW.md  Cargo.toml
apps/contracts/contracts/property-listing/src/: lib.rs  test.rs
apps/contracts/contracts/rental-contract/: Cargo.toml
apps/contracts/contracts/rental-contract/src/: lib.rs
apps/contracts/contracts/review-contract/: CONTRACT_OVERVIEW.md  Cargo.toml
apps/contracts/contracts/review-contract/src/: lib.rs  test.rs
apps/contracts/src/: lib.rs
apps/web/: Dockerfile  README.md  package.json  playwright.config.ts  vitest.config.ts
apps/web/e2e/: auth.spec.ts  booking.spec.ts  home.spec.ts  search.spec.ts
(+109 files in other folders)
