[workspace]
members = [
    "contracts/rental-contract",
    "contracts/review-contract",
]
resolver = "2"

# Shared release profile applied to all workspace members
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
